tests/should_fail/bad_erasure.stderr
error: failed #[erasure] check for bar2
  --> bad_erasure.rs:19:5
   |
14 |     baz::<42>()
   |     ----------- target expression (baz[42])
...
19 |     baz::<0>()
   |     ^^^^^^^^^^ #[erasure] expression (baz[0])

error: failed #[erasure] check for bar3
  --> bad_erasure.rs:24:5
   |
14 |     baz::<42>()
   |     ----------- target expression (baz[42])
...
24 |     baz2::<0>()
   |     ^^^^^^^^^^^ #[erasure] expression (baz[0])

error: failed #[erasure] check for add2
  --> bad_erasure.rs:33:9
   |
28 |     x + y
   |         - erased expression (Var(HirId(4)))
...
33 |     x + x
   |         ^ #[erasure] expression (Var(HirId(2)))

error: #[erasure] target must have a body
  --> bad_erasure.rs:41:1
   |
41 | pub fn quux2<T: Quux>() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

